readme file and trying to clear cache

--- a/index.html
+++ b/index.html
@@ -22,35 +22,35 @@
 		<!-- BEGIN content -->
 		<div class="content">
 			<!-- BEGIN item -->
-			<a href="inside.html" class="item">
+			<a href="subpage.html" class="item">
 				<img src="img/texture.jpg" class="js-image" alt="">
 				<h2>Some title</h2>
 				<p>And some very interesting description.</p>
 			</a>
 			<!-- END item -->
 			<!-- BEGIN item -->
-			<a href="inside.html" class="item">
+			<a href="subpage.html" class="item">
 				<img src="img/texture.jpg" class="js-image" alt="">
 				<h2>Some title</h2>
 				<p>And some very interesting description.</p>
 			</a>
 			<!-- END item -->
 			<!-- BEGIN item -->
-			<a href="inside.html" class="item">
+			<a href="subpage.html" class="item">
 				<img src="img/texture.jpg" class="js-image" alt="">
 				<h2>Some title</h2>
 				<p>And some very interesting description.</p>
 			</a>
 			<!-- END item -->
 			<!-- BEGIN item -->
-			<a href="inside.html" class="item">
+			<a href="subpage.html" class="item">
 				<img src="img/texture.jpg" class="js-image" alt="">
 				<h2>Some title</h2>
 				<p>And some very interesting description.</p>
 			</a>
 			<!-- END item -->
 			<!-- BEGIN item -->
-			<a href="inside.html" class="item">
+			<a href="subpage.html" class="item">
 				<img src="img/texture.jpg" class="js-image" alt="">
 				<h2>Some title</h2>
 				<p>And some very interesting description.</p>
